--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "lucide-react": "^0.540.0",
-    "headlessui/react": "^2.2.7"
+    "@headlessui/react": "^2.2.7"
   },
 "devDependencies": {
   "tailwindcss": "^3.4.1",
