--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "lucide-react": "^0.540.0",
-    "@headlessui/react": "^2.2.7"
+    "lucide-react": "^0.540.0"
   },
 "devDependencies": {
   "tailwindcss": "^3.4.1",
